--- a/.env
+++ b/.env
@@ -1,4 +1,4 @@
-POSTGRES_HOST = POSTGRES_HOST 
-POSTGRES_DATABSE = POSTGRES_DATABASE
-POSTGRES_USER = POSTGRES_USER 
-POSTGRES_PASSWORD = POSTGRES_PASSWORD
+POSTGRES_HOST = localhost
+POSTGRES_DATABASE = maps
+POSTGRES_USER = postgres
+POSTGRES_PASSWORD = postgres
